added various functionality

--- a/src/app/pages/favourite-tab/favourite-tab.page.html
+++ b/src/app/pages/favourite-tab/favourite-tab.page.html
@@ -23,22 +23,7 @@
   </ion-tab-bar>
 </ion-tabs>
 
-<!--
-  <ion-grid>
-    <ion-row class='segmentMenu'>
-      <ion-col>
-        Vsetky
-      </ion-col>
-      <ion-col>
-        Linky
-      </ion-col>
-      <ion-col>
-        Zastavky
-      </ion-col>
-    </ion-row>
-  </ion-grid>
--->
-
+<!-- LINE -->
 <ion-card button class="shadow" color="white" [routerLink]="" style="margin-top: 65px;">
   <ion-card-content class="ion-no-padding">
     <ion-grid>
@@ -61,20 +46,20 @@
         </ion-col>
       </ion-row>
 
-      <ion-row class="ion-no-padding ">
+      <ion-row class="ion-no-padding">
         <ion-col size="2">
-          <div class='bold-favourite-line'>
+          <div class='lineNumberSquare'>
             212
           </div>
         </ion-col>
-        <ion-col size="7">
+        <ion-col size="7" class='divider2'>
           <div class="ion-text-nowrap">
             <h3 class="">ŽST Železná studnička</h3>
             <ion-icon src='./assets/icon/disability.svg'></ion-icon>
           </div>
         </ion-col>
 
-        <ion-col size="3">
+        <ion-col size="3" class='divider2'>
           <div class="bold-favourite-time">
             <ion-img src="./assets/icon/bodky.gif" class="waitingDots"></ion-img>
           </div>
@@ -97,18 +82,17 @@
 
       <ion-row class="ion-no-padding">
         <ion-col size="2">
-          <div class='bold-favourite-line'>
+          <div class='lineNumberSquare'>
             208
           </div>
         </ion-col>
-        <ion-col size="7">
+        <ion-col size="7" class='divider2'>
           <div class="ion-text-nowrap">
             <h3 class="">Staré mesto, Šulekova</h3>
             <ion-icon src='./assets/icon/disability.svg'></ion-icon>
           </div>
         </ion-col>
-
-        <ion-col size="3">
+        <ion-col size="3" class='divider2'>
           <div class="bold-favourite-time">
             o 2 min
           </div>
@@ -117,7 +101,7 @@
 
       <ion-row class="ion-no-padding">
         <ion-col size="2">
-          <div class='bold-favourite-line'>
+          <div class='lineNumberSquare'>
             39
           </div>
         </ion-col>
@@ -132,6 +116,80 @@
         <ion-col size="3">
           <div class="bold-favourite-time red">
             o 5 min
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card-content>
+</ion-card>
+
+<ion-card button class="shadow" color="white" [routerLink]="">
+  <ion-card-content class="ion-no-padding">
+    <ion-grid>
+      <ion-row class="ion-no-padding divider">
+        <ion-col size="2">
+          <div class='lineSquereIcon'>
+            <div class='SquereIconText'>39</div>
+          </div>
+        </ion-col>
+        <ion-col size="8">
+          <div class="ion-text-nowrap">
+            <h3 class="bold">Televízia</h3>
+          </div>
+          <div class="multi-ellipsis">
+            <ion-text color="darkGrey">
+              <p class="destination">Ostredky, Súhvezdná</p>
+            </ion-text>
+          </div>
+        </ion-col>
+        <ion-col size="2">
+          <div class="favouriteTapDiv">
+            <ion-icon name="heart" class="heartFilled"></ion-icon>
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <ion-row class="ion-no-padding paddingCustom">
+        <ion-col size="6" class='divider2'>
+            <h3 class='darkGrey'>najbližšie odchody:</h3>
+        </ion-col>
+        <ion-col size="2" class='divider2 borderRight'>
+          <div class="ion-text-nowrap boldCentered">
+            12:30
+          </div>
+        </ion-col>
+
+        <ion-col size="2" class='divider2 borderRight'>
+          <div class=".centered">
+            12:35
+          </div>
+        </ion-col>
+        <ion-col size="2" class='divider2'>
+          <div class="centered">
+            12:40
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <ion-row class="ion-no-padding">
+        <ion-col size="6">
+          <div class=''>
+            <h3 class='darkGrey'>meškanie:</h3>
+          </div>
+        </ion-col>
+        <ion-col size="2" class='borderRight red'>
+          <div class="ion-text-nowrap">
+            4 min <br/>
+            12:34
+          </div>
+        </ion-col>
+        <ion-col size="2" class='borderRight'>
+          <div class=""></div>
+        </ion-col>
+        <ion-col size="2">
+          <div class="red">
+            10 min <br/>
+            12:50
           </div>
         </ion-col>
       </ion-row>
