--- a/src/app/pages/lines-tab/lines-tab.page.html
+++ b/src/app/pages/lines-tab/lines-tab.page.html
@@ -10,7 +10,7 @@
   <ion-searchbar class="ion-padding" placeholder="Hľadat"></ion-searchbar>
 
   <ion-text>
-    <h2>Zoznam liniek</h2>
+    <h2 class='pageTitle'>Zoznam liniek</h2>
   </ion-text>
 
     <ion-card button class="shadow" color="white" [routerLink]="">
