--- a/src/app/pages/stop-detail/stop-detail.page.html
+++ b/src/app/pages/stop-detail/stop-detail.page.html
@@ -4,7 +4,7 @@
      <ion-back-button [text]="sasda"></ion-back-button>
    </ion-buttons>
    <ion-img src="./assets/icon/PNGbratislava.png" class='baIcon'></ion-img>
-   <ion-title class='titleColor'>Zastávky</ion-title>
+   <ion-title class='titleColor'>Zastávky {{idStop}}</ion-title>
  </ion-toolbar>
 </ion-header>
 
