--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -2,7 +2,7 @@
   <ion-tab-bar slot="bottom" id='tabStyleCustom'>
     <ion-tab-button tab="favourites">
       <ion-icon name="heart" color='baTheme'></ion-icon>
-      <ion-label>Srdcovky</ion-label>
+      <ion-label>Obľúbené</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="lines">
       <ion-icon name="apps" src="./assets/icon/timeline.svg" color='baTheme'></ion-icon>
