--- a/src/app/pages/stop-detail/stop-detail.page.html
+++ b/src/app/pages/stop-detail/stop-detail.page.html
@@ -48,11 +48,25 @@
                 <ion-slides #slides [options]="slideOpt" (ionSlideDidChange)="slideChanged()" slidesPerView="4">
                     <ion-slide>
                         <p class='lineSquereIcon'>39 </p>
+                        </ion-slide>
+                          <ion-slide>
                         <p class='lineSquereIcon'>9 </p>
+                        </ion-slide>
+                          <ion-slide>
                         <p class='lineSquereIcon'>1 </p>
+                        </ion-slide>
+                          <ion-slide>
                         <p class='lineSquereIcon'>80 </p>
+                        </ion-slide>
+                          <ion-slide>
                         <p class='lineSquereIcon'>201 </p>
                     </ion-slide>
+                      <ion-slide>
+                          <p class='lineSquereIcon'>67 </p>
+                          </ion-slide>
+                            <ion-slide>
+                          <p class='lineSquereIcon'>9 </p>
+                          </ion-slide>
                 </ion-slides>
             </ion-col>
             <ion-col class="col-with-arrow" (click)="slideNext()" no-padding col-1>
