--- a/src/app/pages/timetable/timetable.page.html
+++ b/src/app/pages/timetable/timetable.page.html
@@ -68,6 +68,33 @@
         <!-- header row END -->
 
         <ion-row>
+          <ion-col size='2'>
+            <div>04</div>
+            <div>05</div>
+          </ion-col>
+
+          <div class="table">
+            <div class="riadok">
+              <span class="min">16</span>
+              <span class="min">26</span>
+              <span class="min">26</span>
+              <span class="min">26</span>
+              <span class="min">26</span>
+              <span class="min">26</span>
+              <span class="min">26</span>
+              <span class="min">26</span>
+              <span class="min">26</span>
+              <span class="min">26</span>
+              <span class="min">26</span>
+            </div>
+            <div class="riadok">
+              <span class="min">16</span>
+              <span class="min">26</span>
+            </div>
+          </div>
+        </ion-row>
+
+        <!-- <ion-row>
             <ion-col size='2' class='rightDivider'>04</ion-col>
             <ion-col size='2'>16</ion-col>
             <ion-col size='2'></ion-col>
@@ -119,7 +146,7 @@
             <ion-col size='2'>36</ion-col>
             <ion-col size='2'>46v</ion-col>
             <ion-col size='2'>56</ion-col>
-        </ion-row>
+        </ion-row> -->
       </ion-grid>
     </ion-card-content>
   </ion-card>
