--- a/src/app/pages/timetable/timetable.page.scss
+++ b/src/app/pages/timetable/timetable.page.scss
@@ -1,5 +1,10 @@
 .table {
-	width: 260px;
+	width: calc(100% - 20%);
+	overflow: scroll;
+}
+
+.table::-webkit-scrollbar {
+    display: none;
 }
 
 .riadok {
