--- a/src/app/pages/lines-tab/lines-tab.page.html
+++ b/src/app/pages/lines-tab/lines-tab.page.html
@@ -13,90 +13,8 @@
     <h2 class='pageTitle'>Zoznam liniek</h2>
   </ion-text>
 
-    <ion-card button
-              class="shadow"
-              color="white"
-              [routerLink]=""
-              (click)="openLineDetail($event, '39')">
-        <ion-card-content class="ion-no-padding">
-          <ion-grid>
-            <ion-row class="ion-no-padding">
-              <ion-col size="2">
-                <div class='lineSquereIcon'>
-                  <div class='SquereIconText'>1</div>
-                </div>
-              </ion-col>
-              <ion-col size="10">
-                <div class="ion-text-nowrap">
-                  <h3 class="bold">Petrzalka</h3>
-                </div>
-                <div class="multi-ellipsis">
+  <line-card></line-card>
 
-                  <ion-text color="darkGrey">
-                  <p class="destination">
-                    <ion-icon src="./assets/icon/sipka.svg" class='destinationIcon'>
-                    </ion-icon>  Hlavná stanica</p>
-                  </ion-text>
-                </div>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-        </ion-card-content>
-      </ion-card>
-
-    <ion-card button class="shadow" color="white" [routerLink]="">
-        <ion-card-content class="ion-no-padding">
-          <ion-grid>
-            <ion-row class="ion-no-padding">
-              <ion-col size="2">
-                <div class='lineSquereIconGreen'>
-                  <div class='SquereIconText'>39</div>
-                </div>
-              </ion-col>
-              <ion-col size="10">
-                <div class="ion-text-nowrap">
-                  <h3 class="bold">Ostredky, Súhvezdná</h3>
-                </div>
-                <div class="multi-ellipsis">
-
-                  <ion-text color="darkGrey">
-                  <p class="destination">
-                    <ion-icon src="./assets/icon/sipka.svg" class='destinationIcon'>
-                    </ion-icon>  Cintorín Slávičie údolie</p>
-                  </ion-text>
-                </div>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-        </ion-card-content>
-      </ion-card>
-
-    <ion-card button class="shadow" color="white" [routerLink]="">
-        <ion-card-content class="ion-no-padding">
-          <ion-grid>
-            <ion-row class="ion-no-padding">
-              <ion-col size="2">
-                <div class='lineSquereIconOrange'>
-                  <div class='SquereIconText'>80</div>
-                </div>
-              </ion-col>
-              <ion-col size="10">
-                <div class="ion-text-nowrap">
-                  <h3 class="bold">Kollárovo námestie</h3>
-                </div>
-                <div class="multi-ellipsis">
-
-                  <ion-text color="darkGrey">
-                  <p class="destination">
-                    <ion-icon src="./assets/icon/sipka.svg" class='destinationIcon'>
-                    </ion-icon>  Petržalka, Kopčany</p>
-                  </ion-text>
-                </div>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-        </ion-card-content>
-      </ion-card>
  <!--
       <ion-card button class="shadow" color="white"
         [routerLink]="">
