--- a/src/app/pages/favourite-tab/favourite-tab.page.scss
+++ b/src/app/pages/favourite-tab/favourite-tab.page.scss
@@ -19,17 +19,23 @@
   --background: #F8F8F8;
 }
 
-.tabsContentMenu {
-  border: none;
-  --background: #F8F8F8;
-  // border: 1px solid blue;
-  margin-bottom: 20px;
+.secondMenuTabs {
+  background: #F8F8F8;
+  height: 50px;
 }
 
-.tabsContentMenu ion-label {
-  font-size: 1.6em;
+.tabsContentMenu {
+  margin-bottom: 0px;
+}
+
+.tabsContentMenu a {
+  font-size: 1.3em;
   color: #8A8A8A;
-  font-weight: 550;
+  font-weight: 500;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  padding-top: 5px;
 }
 
 ion-col {
