add proxy config file

--- a/src/app/components/line-card/line-card.component.html
+++ b/src/app/components/line-card/line-card.component.html
@@ -1,6 +1,6 @@
-<ion-card button
+<ion-card *ngFor="let line of linesData" button
           class="shadow"
-          color="white"          
+          color="white"
           (click)="openLineDetail($event, '39')">
   <ion-card-content class="ion-no-padding">
     <ion-grid>
