--- a/src/app/components/line-card/line-card.component.html
+++ b/src/app/components/line-card/line-card.component.html
@@ -1,7 +1,8 @@
-<ion-card *ngFor="let line of linesData" button
+<ion-card button
           class="shadow"
           color="white"
-          (click)="openLineDetail($event, '39')">
+          (click)="openLineDetail($event, '39')"
+          [linesData]="linesData">
   <ion-card-content class="ion-no-padding">
     <ion-grid>
       <ion-row class="ion-no-padding">
