--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,6 +1,13 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
+@font-face {
+  font-family: 'InterRegular';
+  font-style: normal;
+  font-weight: normal;
+  src: url('../assets/fonts/Inter-Regular.ttf');
+}
+
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
@@ -82,4 +89,6 @@
 	--ion-color-baThemeContent-contrast-rgb: 0, 0, 0;
 	--ion-color-baThemeContent-shade: #FCFCFC;
 	--ion-color-baThemeContent-tint: #FCFCFC;
+
+  --ion-font-family: 'InterRegular';
 }
