Mentoring - fix component input and RouterModule import

--- a/src/app/components/line-card/line-card.component.html
+++ b/src/app/components/line-card/line-card.component.html
@@ -1,8 +1,7 @@
 <ion-card button
           class="shadow"
           color="white"
-          (click)="openLineDetail($event, '39')"
-          [linesData]="linesData">
+          (click)="openLineDetail($event, '39')">
   <ion-card-content class="ion-no-padding">
     <ion-grid>
       <ion-row class="ion-no-padding">
