--- a/src/app/pages/lines-tab/lines-tab.page.html
+++ b/src/app/pages/lines-tab/lines-tab.page.html
@@ -13,7 +13,7 @@
     <h2 class='pageTitle'>Zoznam liniek</h2>
   </ion-text>
 
-  <line-card></line-card>
+  <line-card [linesData]="linesData"></line-card>
 
  <!--
       <ion-card button class="shadow" color="white"
