--- a/src/app/components/line-card/line-card.component.html
+++ b/src/app/components/line-card/line-card.component.html
@@ -7,12 +7,12 @@
       <ion-row class="ion-no-padding">
         <ion-col size="2">
           <div class='lineSquereIcon'>
-            <div class='SquereIconText'>1</div>
+            <div class='SquereIconText'>{{ linesData[i].name }}</div>
           </div>
         </ion-col>
         <ion-col size="10">
           <div class="ion-text-nowrap">
-            <h3 class="bold">Petrzalka</h3>
+            <h3 class="bold">{{ linesData }}</h3>
           </div>
           <div class="multi-ellipsis">
             <h3 class="bold">
